maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:2: error: Missing closing brace `}' assumed here
var etat=0;
^IslandMaze:2: error: expected class or object definition
var etat=0;
^IslandMaze:4: error: expected start of definition
override def run(){
         ^IslandMaze:15: error: expected class or object definition
def keepHandOnSideWall(){
^